# bi0s-adf

./: .dockerignore  Cargo.toml  LICENSE  README.md  build.rs  namespace.sh  rustfmt.toml
checker-client/: .gitignore  Dockerfile  gen.sh  pyproject.toml  server.py
checker-client/proto/: checker.proto
config/: service.json  teams.json
docs/: README.md
proto/: checker.proto
src/: checker.rs  config.rs  db.rs  dump.rs  flag.rs  flagbot.rs  game.rs  history.rs  lib.rs  main.rs  scoring.rs  service.rs  teams.rs
src/api/: mod.rs
src/api/handlers/: admin_handlers.rs  game_handlers.rs  mod.rs
src/api/models/: cache.rs
src/api/routes/: game.rs  mod.rs
