[package]
name = "bi0s-adf"
version = "0.4.0"
authors = ["Vishnu Dev TJ <vishnudevtj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1"
rand = "0.8"
tonic = "0.9"
prost = "0.11"
clap = "4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
derive_more = "0.99.17"
bincode = "1.3.3"
chrono = { version = "0.4.26", features = ["serde"] }
highway = "1.1.0"
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tower-sessions = "0.12.2"
log = "0.4.22"
rusqlite = "0.32.1"
bitvec = "1.0.1"
cached = { version = "0.53.1", features = ["async", "tokio"] }
rlimit = "0.10.2"
strum = "0.26.3"
strum_macros = "0.26.4"

[build-dependencies]
tonic-build = "0.9"
devx-cmd = "0.5.0"

[profile.release]
debug = true
