[project]
name = "checker-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpc-stubs>=1.53.0.5",
    "grpcio-tools>=1.67.0",
    "grpcio>=1.67.0",
    "mypy>=1.12.1",
    "mypy-protobuf>=3.6.0",
    "protobuf==5.27.2",
    "ruff>=0.7.0",
    "types-protobuf>=5.28.0.20240924",
    "scapy>=2.6.0",
]
